# package-detection-cli

./: .banner_test.txt.swp  README.md  banner_test.txt  main.py  out.txt  pyproject.toml  requirements.txt
detector/: engine.py
llm/: analyzer.py
npm-package/: README.md
parser/: ast_parser.py  behavior_extractor.py
pg/: guard.py
python-package/: README.md
rag/: patterns.json  vector_db.py
scripts/: install.ps1  install.sh
software/: README.md
utils/: downloader.py
