[project]
name = "package-guard"
version = "0.1.0"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "typer>=0.9.0",
    "questionary>=2.0.0",
]

[project.scripts]
pd = "pg.guard:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pg*", "detector*", "parser*", "rag*", "llm*", "utils*"]
